--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🚀🚀위케어유🚀🚀</title>
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css"/>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
-      <header>위케어유 로고자리</header>
+      <header id="header"></header>
       <main>
         <h1 id="headline">위케어유 Countdown</h1>
         <div id="countdown">
